// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Track/Track.tools.svelte: Default 1`] = `
<div>
  <div
    class="undefined root svelte-1wnrcpi"
  >
    <a
      class="flex-none"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-1wnrcpi"
    >
      <span
        class="title svelte-1wnrcpi"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With details 1`] = `
<div>
  <div
    class="undefined root svelte-1wnrcpi"
  >
    <a
      class="flex-none"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-1wnrcpi"
    >
      <span
        class="title svelte-1wnrcpi"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
    <div
      class="duration svelte-1wnrcpi"
    >
      2:06
    </div>
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With menu 1`] = `
<div>
  <div
    class="undefined root svelte-1wnrcpi"
  >
    <a
      class="flex-none"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-dtt58s"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-1wnrcpi"
    >
      <span
        class="title svelte-1wnrcpi"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
    <span
      aria-expanded="false"
      aria-haspopup="menu"
      class="wrapper svelte-1x6dshm"
    >
      <button
        class="iconOnly noBorder svelte-1vd9h50"
      >
        <i
          class="material-icons svelte-1vd9h50"
        >
          more_vert
        </i>
         
         
        
         
      </button>
    </span>
     
    
  </div>
</div>
`;
